# TabVoice

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  scratch.rs
.github/workflows/: rust.yml
src/: Cargo.toml  build.rs
src/examples/: transcribe_test.rs
src/src/: app.rs  audio.rs  dwm_fix.rs  events.rs  ffi.rs  focus.rs  hotkey.rs  keyboard_hook.rs  lib.rs  main.rs  paste.rs  settings.rs  state.rs  transcriber.rs  tray.rs  view.rs
