# Workspace root untuk TabVoice.
# Sub-crate: src/ (TabVoice app binary + library)

[workspace]
members = ["src"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["TabVoice Contributors"]
description = "Voice-to-text typing tool ala Whispr Flow, powered by oxiwhisper"

[workspace.dependencies]
# GUI
iced = { version = "0.13", features = ["canvas", "tokio"] }

# Audio
cpal = "0.15"
rubato = "0.16"

# Auto-paste
arboard = "3"

# Global hotkey
global-hotkey = "0.6"

# Konfigurasi & serialisasi
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling & logging
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

# Async runtime (untuk transcriber worker)
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }

# oxiwhisper sebagai path dependency (subfolder tetangga)
oxiwhisper = { version = "0.1.1", features = ["timing"] }

# Profile: inference CPU-bound, optimize even in dev
[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3
