# Workspace root untuk TabVoice.
# Sub-crate: src/ (TabVoice app binary + library)

[workspace]
members = ["src"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.77"
license = "Apache-2.0"
authors = ["TabVoice Contributors"]
description = "The ultimate AI-powered voice typing tool. Speak naturally, type instantly anywhere."

[workspace.dependencies]

# Audio
cpal = "0.15"
rubato = "0.16"

# Auto-paste
arboard = "3"

# Global hotkey
global-hotkey = "0.6"

# Konfigurasi & serialisasi
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling & logging
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Async runtime (untuk transcriber worker)
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }

# Build whisper.cpp via cmake + generate Rust FFI bindings
cmake = "0.1"
bindgen = "0.69"

# Profile: inference CPU-bound, optimize even in dev
[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
